Add quizlet link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-	<title>UNESCO - Rajat Patwari, Nehal Patel</title>
+	<title>UNESCO (CGW4U) - Rajat Patwari, Nehal Patel</title>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
@@ -35,7 +35,7 @@
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark bg-primary sticky-top">
         <div class="container-fluid d-flex justify-content-center">
-            <span class="navbar-brand"><i class="fas fa-globe-americas"></i> UNESCO</span>
+            <span class="navbar-brand"><i class="fas fa-globe-americas"></i> UNESCO (CGW4U)</span>
         </div>
     </nav>
 	
@@ -48,19 +48,10 @@
             </div>
 
             <div class="text-center mb-4">
-                <strong>Quizlet</strong>: Make sure to visit the Quizlet <a href="#">here</a>.
+                <strong>Quizlet</strong>: Make sure to visit the Quizlet <a href="https://quizlet.com/ca/489111581/unesco-flashcards/?x=1qqK">here</a>.
             </div>
 
             <div id="presentationCarousel" class="carousel slide bg-dark text-light" data-interval="false" data-ride="carousel">
-                <!--<ol class="carousel-indicators">
-                    <li data-target="#presentationCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#presentationCarousel" data-slide-to="1"></li>
-                    <li data-target="#presentationCarousel" data-slide-to="2"></li>
-                    <li data-target="#presentationCarousel" data-slide-to="3"></li>
-                    <li data-target="#presentationCarousel" data-slide-to="4"></li>
-                    <li data-target="#presentationCarousel" data-slide-to="5"></li>
-                    <li data-target="#presentationCarousel" data-slide-to="6"></li>
-                </ol>-->
                 <div class="carousel-inner">
                     <div class="carousel-item text-center p-4 active">
                         <iframe src="https://www.youtube-nocookie.com/embed/zt7l1Ky4-gQ?start=39" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
