--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <br />
                     In all seriousness, however:
                 </p>
-                <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4 mx-0">
                     <div class="col d-flex justify-content-center px-1 mb-2">
                         <div class="card bg-light text-dark border-info">
                             <div class="card-header bg-light text-muted">
@@ -183,7 +183,7 @@
                                 </p>
                             </div>
                             <div class="card-footer bg-dark text-muted">
-                                <p class="small mb-0">2013-2020</p>
+                                <p class="small mb-0">2013-2016</p>
                             </div>
                         </div>
                     </div>
