Slight card alignment adjustments.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     In all seriousness, however:
                 </p>
                 <div class="row row-cols-1 row-cols-md-2 row-cols-xl-4 mx-0">
-                    <div class="col d-flex justify-content-center px-1 mb-2">
+                    <div class="col d-flex justify-content-center px-0 pr-md-1 mb-2">
                         <div class="card bg-light text-dark border-info">
                             <div class="card-header bg-light text-muted">
                                 <p class="small mb-0">University</p>
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col d-flex justify-content-center px-1 mb-2">
+                    <div class="col d-flex justify-content-center px-0 pl-md-1 px-xl-1 mb-2">
                         <div class="card bg-dark text-light">
                             <div class="card-header bg-dark text-muted">
                                 <p class="small mb-0">High School</p>
@@ -145,7 +145,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col d-flex justify-content-center px-1 mb-2">
+                    <div class="col d-flex justify-content-center px-0 pr-md-1 px-xl-1 mb-2">
                         <div class="card bg-dark text-light">
                             <div class="card-header bg-dark text-muted">
                                 <p class="small mb-0">High School</p>
@@ -166,7 +166,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col d-flex justify-content-center px-1 mb-2">
+                    <div class="col d-flex justify-content-center px-0 pl-md-1 mb-2">
                         <div class="card bg-dark text-light">
                             <div class="card-header bg-dark text-muted">
                                 <p class="small mb-0">Middle School</p>
