Fixed a small typo in the intro.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <h4 class="font-weight-bold mb-0">Who am I?</h4>
                 <p class="mb-4">
                     I'm a first-year student at the <i class="fas fa-university"></i> <span class="font-italic">University of Waterloo</span>
-                    currently stuyding <i class="fas fa-code-branch"></i> <span class="font-italic">Software Engineering</span>.
+                    currently studying <i class="fas fa-code-branch"></i> <span class="font-italic">Software Engineering</span>.
                     I'm a passionate Software Developer and I have worked on several different projects, including (but not limited to):
                     <span class="mark"><i class="fas fa-file-code"></i> <a href="#vertex" class="text-decoration-none">my own programming language</a></span>,
                     <span class="mark"><i class="fas fa-gamepad"></i> <a href="#gridworld" class="text-decoration-none">a small turn-based simulation game</a></span>,
