--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
                 <i class="fas fa-home"></i> Rajat Patwari
             </a>
 
-            <div id="phoneMenu" class="navbar-collapse collapse order-1">
+            <div id="innerMenu" class="navbar-collapse collapse order-1">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#bio" class="__MENU_ITEM_LINK__ nav-link">
+                        <a href="#bio" class="__MENU_ITEM_LINK__ __SLIDING_LINK__ nav-link">
                             <i class="fas fa-id-badge fa-fw"></i> Bio
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#projects" class="__MENU_ITEM_LINK__ nav-link">
+                        <a href="#projects" class="__MENU_ITEM_LINK__ __SLIDING_LINK__ nav-link">
                             <i class="fas fa-project-diagram fa-fw"></i> Projects
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#skills" class="__MENU_ITEM_LINK__ nav-link">
+                        <a href="#skills" class="__MENU_ITEM_LINK__ __SLIDING_LINK__ nav-link">
                             <i class="fas fa-pencil-ruler fa-fw"></i> Skills
                         </a>
                     </li>
@@ -56,7 +56,7 @@
     <div class="container my-2">
         <div class="alert alert-info alert-dismissible fade show my-0" role="alert">
             <h4 class="alert-heading font-weight-bold"><i class="fas fa-exclamation-circle small"></i> New Vertex Release</h4>
-            <a href="#vertex" class="alert-link text-primary text-decoration-none font-weight-bold">Vertex 2.0.1</a> was recently released!
+            <a href="#vertex" class="__SLIDING_LINK__ alert-link text-primary text-decoration-none font-weight-bold">Vertex 2.0.1</a> was recently released!
             It's a complete redesign of the language from the ground up. Be sure to check it out!
             <button class="close" type="button" data-dismiss="alert">&times;</button>
         </div>
@@ -79,10 +79,10 @@
                     I'm a first-year student at the <i class="fas fa-university"></i> <span class="font-italic">University of Waterloo</span>
                     currently studying <i class="fas fa-code-branch"></i> <span class="font-italic">Software Engineering</span>.
                     I'm a passionate Software Developer and I have worked on several different projects, including (but not limited to):
-                    <span class="mark"><i class="fas fa-file-code"></i> <a href="#vertex" class="text-decoration-none">my own programming language</a></span>,
-                    <span class="mark"><i class="fas fa-gamepad"></i> <a href="#gridworld" class="text-decoration-none">a small turn-based simulation game</a></span>,
-                    <span class="mark"><i class="fas fa-chart-line"></i> <a href="#mdm4u" class="text-decoration-none">a data-analytics/correlation website</a></span>, and
-                    <span class="mark"><i class="fas fa-expand-arrows-alt"></i> <a href="#extensions" class="text-decoration-none">a set of extensions to the .NET Core BCL</a></span>.
+                    <span class="mark"><i class="fas fa-file-code"></i> <a href="#vertex" class="__SLIDING_LINK__ text-decoration-none">my own programming language</a></span>,
+                    <span class="mark"><i class="fas fa-gamepad"></i> <a href="#gridworld" class="__SLIDING_LINK__ text-decoration-none">a small turn-based simulation game</a></span>,
+                    <span class="mark"><i class="fas fa-chart-line"></i> <a href="#mdm4u" class="__SLIDING_LINK__ text-decoration-none">a data-analytics/correlation website</a></span>, and
+                    <span class="mark"><i class="fas fa-expand-arrows-alt"></i> <a href="#extensions" class="__SLIDING_LINK__ text-decoration-none">a set of extensions to the .NET Core BCL</a></span>.
                 </p>
 
                 <h4 class="font-weight-bold mb-0">Profiles</h4>
@@ -158,7 +158,7 @@
                                 <p class="card-text">
                                     Magnet program attended for Grades 9, 10 and 11.
                                     Studied many STEM courses, earned work experience and
-                                    various industry certifications (see <a href="#certs" class="text-decoration-none">Certifications</a>).
+                                    various industry certifications (see <a href="#certs" class="__SLIDING_LINK__ text-decoration-none">Certifications</a>).
                                 </p>
                             </div>
                             <div class="card-footer bg-dark text-muted">
@@ -179,7 +179,7 @@
                                 <p class="card-text">
                                     Magnet program attended for Grades 6, 7 and 8.
                                     Studied regular middle school courses with some STEM focus and earned
-                                    some industry certifications (see <a href="#certs" class="text-decoration-none">Certifications</a>).
+                                    some industry certifications (see <a href="#certs" class="__SLIDING_LINK__ text-decoration-none">Certifications</a>).
                                 </p>
                             </div>
                             <div class="card-footer bg-dark text-muted">
@@ -320,12 +320,12 @@
                 </ul>
 
                 <h4 class="font-weight-bold mb-0">Known Programming Languages</h4>
-                <ul class="fa-ul mb-4">
+                <ul class="fa-ul mb-2">
                     <li><span class="fa-li"><i class="fas fa-star small"></i></span>
                         <span class="mark">Fluency</span>
                         <ul class="fa-ul">
                             <li><span class="fa-li"><i class="fas fa-arrow-right small"></i></span>
-                                <a href="#vertex" class="text-decoration-none">Vertex</a> (My Own Programming Language)
+                                <a href="#vertex" class="__SLIDING_LINK__ text-decoration-none">Vertex</a> (My Own Programming Language)
                             </li>
                             <li><span class="fa-li"><i class="fas fa-arrow-right small"></i></span>
                                 C#
@@ -397,11 +397,11 @@
     <footer>
         <div class="container">
             <hr />
-            <p class="small mb-2">&copy; 2020 - <span class="underline">Coded, Designed and Written by <span class="font-weight-bold">Rajat Patwari</span></span></p>
+            <p class="small mb-2">&copy; 2020 - <span class="text-decoration-underline">Coded, Designed and Written by <span class="font-weight-bold">Rajat Patwari</span></span></p>
         </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
@@ -410,6 +410,13 @@
         $(document).ready(function() {
             $("abbr").attr("data-toggle", "tooltip");
             $("[data-toggle='tooltip']").tooltip();
+
+            $(".__SLIDING_LINK__").click(function(e) {
+                e.preventDefault();
+                let href = $(this).attr("href");
+                history.pushState({}, "", href);
+                $("html,body").animate({scrollTop: $(href).offset().top}, "slow");
+            });
         });
     </script>
 </body>
