--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav id="menu" class="navbar navbar-expand-md sticky-top bg-primary navbar-dark">
         <div class="container-fluid">
             <a href="/" class="navbar-brand mr-0">
-                <i class="fas fa-home"></i> Rajat Patwari
+                <i class="fas fa-house-user"></i> Rajat Patwari
             </a>
 
             <div id="innerMenu" class="navbar-collapse collapse order-1">
